fix contrast errors, fix '<ul> and <ol> must only directly contain <li> error'

--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,7 +1,4 @@
 $global-link-color: #006600;
 $global-link-hover-color: #0071B3;
 $global-color: #000;
-$button-default-background: #235626;
-$button-default-color: #fff;
-$button-default-hover-background: #000;
-$button-default-hover-color: #fff;
+$global-muted-color: #666;
